tests/baselines/reference/assignmentCompatability39.errors.txt
tests/cases/compiler/assignmentCompatability39.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type 'classWithTwoPublic<数字, 文字>'.
  Property 'two' is optional in type 'interfaceWithPublicAndOptional<数字, 文字>' but required in type 'classWithTwoPublic<数字, 文字>'.


==== tests/cases/compiler/assignmentCompatability39.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export         class classWithTwoPublic<T,U> { constructor(public one: T, public two: U) {} }    var x2 = new classWithTwoPublic(1, "a");;
        export var __val__x2 = x2;
    }
    __test2__.__val__x2 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type 'classWithTwoPublic<数字, 文字>'.
!!! error TS2322:   Property 'two' is optional in type 'interfaceWithPublicAndOptional<数字, 文字>' but required in type 'classWithTwoPublic<数字, 文字>'.